tests/e2e/fail/ptr_from_str.ep
# COMPILE_ERROR: ptr conversion requires i64, u64, array, or product, got str
fun main(): void {
    let value = ptr("Epic")
}
